<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.RadioPlayerActivity">


    <LinearLayout
        android:id="@+id/ll_layout_1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_switch_band"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:text="@string/btn_switch_band_text" />

        <Button
            android:id="@+id/btn_set_eq"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:text="@string/btn_set_eq_text" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:text="@string/btn_scan_text" />

        <Button
            android:id="@+id/btn_switch_loc_or_dx"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/btn_switch_loc_or_dx_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/ll_layout_1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:text="@string/btn_prev_text" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/btn_next_text" />
    </LinearLayout>

</RelativeLayout>